# Raycppcraft

./: CMakeLists.txt
lib/raylib-5.5/src/: rcamera.h
src/: camera.h  chunk.cpp  chunk.h  cube.cpp  cube.h  globals.cpp  globals.h  main.cpp  settings.h  textures.cpp  textures.h  world.cpp  world.h
src/physics/: physics.cpp  physics.h
src/renderer/: chunk.cpp  chunk.h  textures.h
src/stats-windows/: stats.h
src/worldgen/: world.cpp  world.h
